# Rust-Transaction-Web-server

./: .dockerignore  .env.example  API.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  docker-compose.yml
migrations/: 1_create_api_keys.sql  2_create_accounts.sql  3_create_transactions.sql  4_create_webhook_endpoints.sql  5_create_webhook_events.sql
scripts/: create_api_key.sh  test_api.sh
src/: config.rs  db.rs  error.rs  main.rs
src/handlers/: accounts.rs  health.rs  mod.rs  transactions.rs  webhooks.rs
src/middleware/: auth.rs  mod.rs
src/models/: account.rs  api_key.rs  mod.rs  transaction.rs  webhook.rs
src/services/: mod.rs  transaction_service.rs  webhook_service.rs
